tests/expectations/compiler/dynamic_dispatch/dynamic_get_wrong_arg_count_fail.out
Error [ETYC0372181]: `_dynamic_get` requires 4 arguments, but found 3.
    --> compiler-test:11:20
     |
  11 |     let val: u64 = _dynamic_get::[u64](prog, net, m);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372066]: `self.caller` is not a valid operand in a finalization context.
    --> compiler-test:12:26
     |
  12 |     Mapping::set(result, self.caller, val);
     |                          ^^^^^^^^^^^
